ros2_ws/log/build_2020-10-17_00-15-52/py_pubsub/stderr.log
  File "/home/shorouk/ros2_ws/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/subscriber_member_function.py", line 40
    if(msg1=="5")
                ^
SyntaxError: invalid syntax

